production-cf.yaml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  VpcBlock:
    Type: String
    Default: 10.0.0.0/21
    Description: The CIDR range for the VPC. This should be a valid private (RFC 1918) CIDR range.
  DBInstanceClass:
    Default: db.m5.large
    Description: DB instance class
    Type: String
    ConstraintDescription: Must select a valid DB instance type.
  DBAllocatedStorage:
    Default: '100'
    Description: The size of the database (GiB)
    Type: Number
    MinValue: '20'
    MaxValue: '65536'
    ConstraintDescription: must be between 20 and 65536 GiB.
  DBVersion:
    Type: String
    Default: 13.5
    Description:  latest AWS Aurora version supported.
  DBPassword:
    NoEcho: 'true'
    Description: Password Aurora Postgres Database access
    Type: String
    MinLength: '8'
    MaxLength: '41'
    AllowedPattern: '[a-zA-Z0-9]*'
    ConstraintDescription: must contain only alphanumeric characters.
  DBPort:
    Type: String
    Default: 3306
    Description: AWS Aurora Database Port
  ClusterNodesNumber:
    Type: Number
    Default: 3
    Description: Cluster Node Group size
  ClusterNodesType:
    Type: String
    Default: 'm5.large'
    Description: Cluster Node Group Type
  ClusterVersion:
    Type: String
    Default: 1.22
    Description:  choose AWS EKS cluster version.
  ClusterNodeStorage:
    Default: 100
    Description: The size of the database (GiB)
    Type: Number
    MinValue: '20'
    MaxValue: '65536'
    ConstraintDescription: must be between 20 and 65536 GiB.
  ClusterPublicAccess:
    AllowedValues: [true,false]
    Default: false
    Description: Enable or Disable Cluster API access from the Public Network
    Type: String
  CoreDnsVersion:
    Type: String
    Default: v1.8.7-eksbuild.1
    Description: AWS EKS CoreDNS Addon Version
  KubeProxyVersion:
    Type: String
    Default: v1.22.6-eksbuild.1
    Description: AWS EKS Kube Proxy Addon Version
  CNIVersion:
    Default: v1.11.0-eksbuild.1
    Type: String
    Description: AWS EKS Kube ENI Addon Version

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
         default: "Environment Configuration"
        Parameters:
          - VpcBlock
          - DBPassword
          - DBUsername
          - DBAllocatedStorage
          - DBInstanceClass
          - DBName
          - DBVersion
          - ClusterNodesNumber
          - ClusterNodesType
          - ClusterVersion
          - ClusterNodeStorage

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-vpc"
        - Key: !Sub 'kubernetes.io/cluster/${AWS::StackName}-cluster'
          Value: "owned"

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: name
          Value: !Sub "${AWS::StackName}-itgw"

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
    DependsOn:
      - InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-public-RT"

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-private-RT"

  DatabaseRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-Database-RT"
    
  NatGatewayEIP:
    DependsOn:
      - VPCGatewayAttachment
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-eip"
      
  PublicRoute:
    DependsOn: VPCGatewayAttachment
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PrivateRoute:
    DependsOn:
      - NatGateway
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
    
  DatabaseRoute:
    DependsOn:
      - NatGateway
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref DatabaseRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  NatGateway:
    DependsOn:
      - NatGatewayEIP
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt "NatGatewayEIP.AllocationId"
      SubnetId: !Ref PublicSubnet01
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-natgwz"

  # Public Subnets
  PublicSubnet01:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 01
    Properties:
      AvailabilityZone: !Select 
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select [ 0, !Cidr [ !Ref VpcBlock, 9 , 7 ] ]
      VpcId:
        Ref: VPC
      Tags: 
      - Key: Name
        Value: !Sub "${AWS::StackName}-publicsubnet01"
  
  PublicSubnet02:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 02
    Properties:
      AvailabilityZone: !Select 
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select [ 1, !Cidr [ !Ref VpcBlock, 9 , 7 ] ]
      VpcId:
        Ref: VPC
      Tags: 
      - Key: Name
        Value: !Sub "${AWS::StackName}-publicsubnet02"

  PublicSubnet03:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 02
    Properties:
      AvailabilityZone: !Select 
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select [ 2, !Cidr [ !Ref VpcBlock, 9 , 7 ] ]
      VpcId:
        Ref: VPC
      Tags: 
      - Key: Name
        Value: !Sub "${AWS::StackName}-publicsubnet03"
  
  # Private Subnets
  PrivateSubnet01:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Subnet 03
    Properties:
      AvailabilityZone: !Select 
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select [ 3, !Cidr [ !Ref VpcBlock, 9 , 7 ] ]
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-PrivateSubnet01"
      - Key: "kubernetes.io/role/internal-elb"
        Value: 1
  
  PrivateSubnet02:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet 02
    Properties:
      AvailabilityZone: !Select 
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select [ 4, !Cidr [ !Ref VpcBlock, 9 , 7 ] ]
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-privatesubnet02"
      - Key: "kubernetes.io/role/internal-elb"
        Value: 1
  
  PrivateSubnet03:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet 03
    Properties:
      AvailabilityZone: !Select 
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select [ 5, !Cidr [ !Ref VpcBlock, 9 , 7 ] ]
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-privatesubnet03"
      - Key: "kubernetes.io/role/internal-elb"
        Value: 1

  # Database Subnets
  DBSubnet01:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: DB Subnet 01
    Properties:
      AvailabilityZone: !Select 
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select [ 6, !Cidr [ !Ref VpcBlock, 9 , 7 ] ]
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-dbsubnet01"
  
  DBSubnet02:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: DB Subnet 02
    Properties:
      AvailabilityZone: !Select 
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select [ 7, !Cidr [ !Ref VpcBlock, 9 , 7 ] ]
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-dbsubnet02"
  
  DBSubnet03:
    Type: AWS::EC2::Subnet
    Metadata:
      Comment: DB Subnet 03
    Properties:
      AvailabilityZone: !Select 
        - 2
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: !Select [ 8, !Cidr [ !Ref VpcBlock, 9 , 7 ] ]
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${AWS::StackName}-dbsubnet03"
  
  # Route TableAssociation
  PublicSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet01
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet02
      RouteTableId: !Ref PublicRouteTable
  
  PublicSubnet03RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet03
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet01
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet02
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet03RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet03
      RouteTableId: !Ref PrivateRouteTable

  Database01RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBSubnet01
      RouteTableId: !Ref DatabaseRouteTable

  Database02RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBSubnet02
      RouteTableId: !Ref DatabaseRouteTable

  Database03RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBSubnet03
      RouteTableId: !Ref DatabaseRouteTable

 # Security Groups
  ClusterControlPlaneSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cluster communication with worker nodes
      VpcId: !Ref VPC
      Tags:
        - Key: !Sub kubernetes.io/cluster/${AWS::StackName}-cluster
          Value: owned
        - Key: Name
          Value: !Sub "${AWS::StackName}-eks-sg"

  NodeSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Security group for all nodes in the cluster
      Tags:
        - Key: !Sub kubernetes.io/cluster/${AWS::StackName}-cluster
          Value: owned
        - Key: Name
          Value: !Sub "${AWS::StackName}-node-sg"
      VpcId: !Ref VPC

  # Security Groups Rules
  NodeSecurityGroupIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    DependsOn: NodeSecurityGroup
    Properties:
      Description: Allow node to communicate with each other
      FromPort: 0
      GroupId: !Ref NodeSecurityGroup
      IpProtocol: "-1"
      SourceSecurityGroupId: !Ref NodeSecurityGroup
      ToPort: 65535

  ClusterControlPlaneSecurityGroupIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    DependsOn: NodeSecurityGroup
    Properties:
      Description: Allow pods to communicate with the cluster API Server
      FromPort: 443
      GroupId: !Ref ClusterControlPlaneSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref NodeSecurityGroup
      ToPort: 443

  ControlPlaneEgressToNodeSecurityGroup:
    Type: "AWS::EC2::SecurityGroupEgress"
    DependsOn: NodeSecurityGroup
    Properties:
      Description: Allow the cluster control plane to communicate with worker Kubelet and pods
      DestinationSecurityGroupId: !Ref NodeSecurityGroup
      FromPort: 1025
      GroupId: !Ref ClusterControlPlaneSecurityGroup
      IpProtocol: tcp
      ToPort: 65535

  ControlPlaneEgressToNodeSecurityGroupOn443:
    Type: "AWS::EC2::SecurityGroupEgress"
    DependsOn: NodeSecurityGroup
    Properties:
      Description: Allow the cluster control plane to communicate with pods running extension API servers on port 443
      DestinationSecurityGroupId: !Ref NodeSecurityGroup
      FromPort: 443
      GroupId: !Ref ClusterControlPlaneSecurityGroup
      IpProtocol: tcp
      ToPort: 443

  NodeSecurityGroupFromControlPlaneIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    DependsOn: NodeSecurityGroup
    Properties:
      Description: Allow worker Kubelets and pods to receive communication from the cluster control plane
      FromPort: 1025
      GroupId: !Ref NodeSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref ClusterControlPlaneSecurityGroup
      ToPort: 65535

  NodeSecurityGroupFromControlPlaneOn443Ingress:
    Type: "AWS::EC2::SecurityGroupIngress"
    DependsOn: NodeSecurityGroup
    Properties:
      Description: Allow pods running extension API servers on port 443 to receive communication from cluster control plane
      FromPort: 443
      GroupId: !Ref NodeSecurityGroup
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref ClusterControlPlaneSecurityGroup
      ToPort: 443

  # Database Security Group:
  DBSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security group for AWS RDS Database
      Tags:
        - Key: !Sub kubernetes.io/cluster/${AWS::StackName}-cluster
          Value: owned
        - Key: Name
          Value: !Sub '${AWS::StackName}-db-sg'
      VpcId: !Ref VPC

  DB1SecIngres:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allow Nodes to communicate with DB
      FromPort: !Ref DBPort
      GroupId: !Ref DBSecGroup
      IpProtocol: 'tcp'
      SourceSecurityGroupId: !Ref NodeSecurityGroup
      ToPort: !Ref DBPort
    DependsOn: [DBSecGroup]
  
  DB2SecIngres:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allow Nodes to communicate with DB
      FromPort: !Ref DBPort
      GroupId: !Ref DBSecGroup
      IpProtocol: 'tcp'
      CidrIp: !Ref VpcBlock
      ToPort: !Ref DBPort
    DependsOn: [DBSecGroup]


  # Create AWS RDS Aurora Database
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties: 
      DBSubnetGroupName: !Sub "${AWS::StackName}-DBSubnetGroup"
      DBSubnetGroupDescription: Database Subnet Group for Aurora Database
      SubnetIds: 
        - !Ref DBSubnet01
        - !Ref DBSubnet02
        - !Ref DBSubnet03
    DependsOn: 
      [DBSubnet01, DBSubnet02, DBSubnet03]

  DatabaseCluster:
    Type: AWS::RDS::DBCluster
    Properties:
      Engine: aurora-postgresql
      EngineVersion: !Ref DBVersion
      MasterUsername: 'atc'
      MasterUserPassword: !Ref DBPassword
      BackupRetentionPeriod: 30
      PreferredBackupWindow: 01:00-02:00
      PreferredMaintenanceWindow: mon:03:00-mon:04:00
      DBSubnetGroupName: !Ref 'DBSubnetGroup'
      VpcSecurityGroupIds:
      - !Ref DBSecGroup
      Port: !Ref DBPort
    DependsOn:
      [DBSubnet01, DBSubnet02, DBSubnet03]

  DatabasePrimaryInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      Engine: aurora-postgresql
      EngineVersion: !Ref DBVersion
      DBClusterIdentifier: !Ref 'DatabaseCluster'
      DBInstanceClass: db.r5.large
      DBSubnetGroupName: !Ref 'DBSubnetGroup'
    DependsOn: [DBSubnet01, DBSubnet02, DBSubnet03]

  # AWS EKS Roles and Profiles
  EKSIAMRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - eks.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
        - arn:aws:iam::aws:policy/AmazonEKSServicePolicy

  AmazonEKSNodeRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy

  # Create Kubernetes and NodeGroup
  EKSCluster:
    Type: AWS::EKS::Cluster
    Properties:
      Name: !Sub "${AWS::StackName}-cluster"
      RoleArn: !GetAtt EKSIAMRole.Arn
      ResourcesVpcConfig:
        SecurityGroupIds:
          - !Ref ClusterControlPlaneSecurityGroup
        SubnetIds:
          - !Ref PrivateSubnet01
          - !Ref PrivateSubnet02
          - !Ref PrivateSubnet03
        EndpointPrivateAccess: true
        EndpointPrivateAccess: !Ref ClusterPublicAccess
      Version: !Ref ClusterVersion
      Logging:
        ClusterLogging:
          EnabledTypes:
            - Type: api
            - Type: audit
    DependsOn:
      [ PrivateSubnet01, PrivateSubnet02, PrivateSubnet03, ClusterControlPlaneSecurityGroup, EKSIAMRole, AmazonEKSNodeRole]

  EKSAddonCNI:
    Type: AWS::EKS::Addon
    Properties:
      AddonName: vpc-cni
      AddonVersion: !Ref CNIVersion
      ResolveConflicts: OVERWRITE
      ClusterName: !Sub '${AWS::StackName}-cluster'
    DependsOn:
      [ EKSCluster, EKSNodegroup]

  EKSAddonCoreDNS:
    Type: AWS::EKS::Addon
    Properties:
      AddonName: coredns
      AddonVersion: !Ref CoreDnsVersion
      ClusterName: !Sub '${AWS::StackName}-cluster'
      ResolveConflicts: OVERWRITE
    DependsOn: [EKSCluster]
  
  EKSAddonKubeProxy:
    Type: AWS::EKS::Addon
    Properties:
      AddonName: kube-proxy
      AddonVersion: !Ref KubeProxyVersion
      ClusterName: !Sub '${AWS::StackName}-cluster'
      ResolveConflicts: OVERWRITE
    DependsOn: [EKSCluster]

  EKSNodegroup:
    Type: "AWS::EKS::Nodegroup"
    Properties:
      ClusterName: !Sub "${AWS::StackName}-cluster"
      NodeRole: !GetAtt AmazonEKSNodeRole.Arn
      DiskSize: !Ref ClusterNodeStorage
      InstanceTypes:
      - !Ref ClusterNodesType
      ScalingConfig:
        MinSize: !Ref ClusterNodesNumber
        DesiredSize: !Ref ClusterNodesNumber
        MaxSize: !Ref ClusterNodesNumber
      Subnets:
        - !Ref PrivateSubnet01
        - !Ref PrivateSubnet02
        - !Ref PrivateSubnet03
      ForceUpdateEnabled: true
      UpdateConfig:
        MaxUnavailablePercentage: 50
    DependsOn:
      [ EKSCluster, NodeSecurityGroup, EKSIAMRole, AmazonEKSNodeRole]

Outputs:
  SubnetIds:
    Description: Subnets IDs in the VPC
    Value:
      !Join [
        ",",
        [
          !Ref PublicSubnet01,
          !Ref PublicSubnet02,
          !Ref PublicSubnet03,
          !Ref PrivateSubnet01,
          !Ref PrivateSubnet02,
          !Ref PrivateSubnet03,
        ],
      ]
  SecurityGroupsEKS:
    Description: Security group for the cluster control plane communication with worker nodes
    Value: !Ref ClusterControlPlaneSecurityGroup
  SecurityGroupsNodes:
    Description: Security group for worker nodes
    Value: !Ref NodeSecurityGroup
  VpcId:
    Description: Virtual Private Cloud ID
    Value: !Ref VPC
  EksArn:
    Description: EKS Kubernertes ARN
    Value: !GetAtt EKSCluster.Arn
  EksApi:
    Description: EKS Kubernertes API Endpoint
    Value: !GetAtt EKSCluster.Endpoint
  NodeGroup:
    Description: EKS NodeGroup
    Value: !GetAtt EKSNodegroup.Arn
  DatabaseEndpoint:
    Description: AWS RDS Aurora
    Value: !GetAtt DatabaseCluster.Endpoint.Address
  ReadDatabaseEndpoint:
    Description: AWS RDS Aurora
    Value: !GetAtt DatabaseCluster.ReadEndpoint.Address
  AccountID:
    Value: !Sub "${AWS::AccountId}"
